minor changes to day2

--- a/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
+++ b/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "source": [
     "# Example for loop\n",
     "solutions = []\n",
@@ -42,23 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "source": [
     "[num for num in solutions] #returns itself\n",
-    "[num for num in solutions if num%2 == 0] #returns only even elements"
+    "[num for num in solutions if num%2 == 0] #returns only values that are even"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[0, 10, 20, 30, 40]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -70,29 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "source": [
-    "type(range(0,10))\n",
+    "type(range(0,10)) #if you don't provide a step size, it defaults to 1\n",
     "\n",
     "print(range(0,10)) #a range object\n",
     "\n",
     "print(list(range(0,10))) #can be expanded by casting to a list"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "range(0, 10)\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "source": [
     "# examples of range(x,y,z)\n",
     "seq = [x for x in range(20)] #If you only provide range() with one integer, it defaults to starting at 0\n",
@@ -115,32 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "Folks = [(\"Jared\",\"Human Genetics\",\"2024\"),\n",
-    "(\"Nora\", \"BCMB\",\"2025\"),\n",
-    "(\"Loyal\", \"DGM\",\"Indefinite\")]\n",
-    "\n",
-    "[x[1] for x in Folks]\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['Human Genetics', 'BCMB', 'DGM']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "Folks = [(\"Jared\",\"Human Genetics\",\"student\"),\n",
+    "(\"Norah\", \"BCMB\",\"student\"),\n",
+    "(\"Loyal\", \"DGM\",\"professor\")]\n",
+    "\n",
+    "[x[1] for x in Folks]\n",
+    "\n",
+    "## Use list comprehension and fstring formating to write a sentence about each person using the info above.\n",
+    "??\n",
+    "\n"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -178,7 +144,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "While that's not terribly tedious, what if we needed to do this for 10,000 different dna sequences? We will definitely need a way to more quickly perform these actions. What we need to do is 'functionalize' this process so we can effectively turn it into a reuseable command. So lets create a function to do all of this for us. We start by defining the function with the `def` statement to give the function a name, followed by a pair of parentheses `()` where we can name a few 'parameters' (another name for variables passed to a function) that we will use within our function. This is then followed by the code block to execute when we 'call' the function. At the end of the function, we specify what values we want to return with `return()`."
+    "While that's not terribly tedious, what if we needed to do this for 10,000 different dna sequences? We will definitely need a way to more quickly perform these actions. What we need to do is 'functionalize' this process so we can effectively turn it into a reuseable command. So lets create a function to do all of this for us. We start by defining the function with the `def` statement to define the function's name, followed by a pair of parentheses `()` where we can name a few 'parameters' (another name for variables passed to a function) that we will use within our function. This is then followed by the code block to execute when we 'call' the function. At the end of the function, we specify what values we want to return with `return()`."
    ],
    "metadata": {}
   },
@@ -409,31 +375,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "source": [
     "import sys\n",
     "sys.path"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['',\n",
-       " '/Users/loyalgoff/Google Drive/Work/Goff Lab/Teaching/BCMB/bcmb_bootcamp2020/day1/notebooks',\n",
-       " '/Users/loyalgoff/anaconda3/lib/python37.zip',\n",
-       " '/Users/loyalgoff/anaconda3/lib/python3.7',\n",
-       " '/Users/loyalgoff/anaconda3/lib/python3.7/lib-dynload',\n",
-       " '/Users/loyalgoff/anaconda3/lib/python3.7/site-packages',\n",
-       " '/Users/loyalgoff/anaconda3/lib/python3.7/site-packages/aeosa',\n",
-       " '/Users/loyalgoff/anaconda3/lib/python3.7/site-packages/IPython/extensions',\n",
-       " '/Users/loyalgoff/.ipython']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 33
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -551,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "source": [
     "file = open('myOutput.txt','w')\n",
     "file.write(\"Here is my awesome file content!\\n\")\n",
@@ -569,30 +516,7 @@
     "for line in file:\n",
     "    print(line)\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Here is my awesome file content!\n",
-      "\n",
-      "It's probably the most important information I'll need for my thesis!\n",
-      "\n",
-      "Gapdh\n",
-      "\n",
-      "Mef2c\n",
-      "\n",
-      "Pax6\n",
-      "\n",
-      "Cxcl1\n",
-      "\n",
-      "Msi1\n",
-      "\n",
-      "I forgot to add this as well\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
