day3 draft complete

--- a/day3/notebooks/plotting.ipynb
+++ b/day3/notebooks/plotting.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The base plotting package that (arguably) works best with Jupyter and python is `matplotlib`. We are going to use a specific interface to it called `seaborn`. The best way to integrate it into our notebooks is to use the python \"magic\" command `%matplotlib inline` like so:"
+    "The base plotting package that (arguably) works best with Jupyter and python is `matplotlib`.  The best way to integrate it into our notebooks is to use the python \"magic\" command `%matplotlib inline` like so:"
    ]
   },
   {
