--- a/day3/notebooks/tidying.ipynb
+++ b/day3/notebooks/tidying.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../files/tidy_rdatasci.png\" width=800>"
+    "<img src=\"files/tidy_rdatasci.png\" width=800>"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "source": [
     "Now - let's try to load some of the data we have in the `data` directory.  First - just take a look at the data (`tb_2014.csv`) by navigating to it in your file folder and opening it in jupyter like so:\n",
-    "<img src=\"../files/browser_tb.JPG\">"
+    "<img src=\"files/browser_tb.JPG\">"
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -468,13 +468,13 @@
        "[7240 rows x 60 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tb_raw=pd.read_csv('~/day2/data/tb_2014.csv')\n",
+    "tb_raw=pd.read_csv('~/bcmb_bootcamp/day3/data/tb_2014.csv')\n",
     "tb_raw"
    ]
   },
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "[7240 rows x 58 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
    "source": [
     "Ok - _finally_ we've got the data clean.  As is frequently the case, \"cleaning\" the data takes a large portion of the time, especially if the data comes from someone else: \n",
     "\n",
-    "<img src=\"../files/datasci_tweet.png\" width=400>"
+    "<img src=\"files/datasci_tweet.PNG\" width=400>"
    ]
   },
   {
@@ -2277,7 +2277,7 @@
    "source": [
     "Now let's add up the number of cases **per country**.  To do this, we need to basically group the dataframe on the `country`, then apply sum all the cases for that country in the split frame, then  recombine the resulting data.  It follows this sort of idea (from <https://jakevdp.github.io/PythonDataScienceHandbook/03.08-aggregation-and-grouping.html>) \n",
     "\n",
-    "<img src=\"../files/03.08-split-apply-combine.png\" width=400>\n",
+    "<img src=\"files/03.08-split-apply-combine.png\" width=400>\n",
     "\n",
     "We can implement it with `groupby` <https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html>, followed by `sum`.  With `groupby` I'm going to extract only the column I want (`value`) which will make it a \"Series\" instead of a full dataframe, with the countries now being the rownames or Indexes."
    ]
