95% done with day1

--- a/day1/assignments/Day1-Homework.ipynb
+++ b/day1/assignments/Day1-Homework.ipynb
@@ -1,13 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9c2817e-c94f-4c0e-aabf-7a3a5c621796",
+   "cell_type": "markdown",
+   "id": "150a881a-49a9-47dd-9f49-a494c5096ba1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Day 1 - Homework assignments"
+    "Day 1 - Homework assignments\n",
+    "\n",
+    "1. Write a bash script that takes as input, two integers and then tests for which one is larger.\n",
+    "\n",
+    "2. Write a bash script that takes as input one integer and returns a random DNA sequence of that length."
    ]
   }
  ],
