95% done with day1 materials

--- a/day1/assignments/Day1_lunch_exercise.ipynb
+++ b/day1/assignments/Day1_lunch_exercise.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, Download this file containing the genome sequence of E. coli K12 using wget command:\n",
+    "First, Download this file containing the genome sequence of E. coli K12 using the `wget` command:\n",
     "https://github.com/doxeylab/learn-genomics-in-unix/raw/master/task1/e-coli-k12-genome.fasta.gz\n"
    ]
   },
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
