--- a/day1/notebooks/Day1.3 - Afternoon - Unix_and_Bash.ipynb
+++ b/day1/notebooks/Day1.3 - Afternoon - Unix_and_Bash.ipynb
@@ -356,7 +356,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## cut | sort | uniq"
+    "## cut | sort | uniq\n",
+    "\n",
+    "### `cut` - remove sections from each line of files\n",
+    "cut can grab columns of data from a delimited (in this case tab-delimited) \n",
+    "\n",
+    "```\n",
+    "$ man cut\n",
+    "\n",
+    "$ cut -f1 data/hg38genes.txt\n",
+    "\n",
+    "# cut -f2,3 data/hg38genes.txt\n",
+    "```\n",
+    "\n",
+    "### `sort` - sort or merge records (lines) of text and binary files\n",
+    "We can combine the power of `cut` with another command-line tool, `sort` by using the pipe (`|`) operator.\n",
+    "\n",
+    "```\n",
+    "# sort all chromosomes\n",
+    "$ cut -f1 data/hg38genes.txt | sort \n",
+    "\n",
+    "# sort all start positions\n",
+    "$ cut -f2 data/hg38genes.txt | sort\n",
+    "```\n",
+    "^ What happened here? let's `man sort` to see if we can figure out a solution.\n",
+    "\n",
+    "### `uniq` - report or filter out repeated lines in a file\n",
+    "As it's name implies, `uniq` will take the input provided and collapse it to the unique set of rows.\n",
+    "When combined with `cut` and `sort` this can be a very handy set of tools for summarizing tabular data in files.\n",
+    "\n",
+    "```\n",
+    "#Find unique chromosome names\n",
+    "$ cut -f1 data/hg38genes.txt | sort | uniq\n",
+    "```\n",
+    "What if we added the argument `-c` to `uniq`? (hint: `man uniq` for answer)\n",
+    "\n",
+    "#### Exercises:\n",
+    "Using the combination of `cut | sort | uniq`, find:\n",
+    "\n",
+    "1. How many genes are on each strand ('+', '-') in the file hg38genes.txt?\n",
+    "\n",
+    "2. How many genes are on each strand, for each chromosome?\n",
+    "\n"
    ]
   },
   {
@@ -367,10 +408,15 @@
     "awk is an incredibly powerful unix utility for manipulating data/files!\n",
     "\n",
     "```\n",
-    "$ awk '{print $1}' hg38genes.txt  # assumes tab/space delimited columns\n",
-    "$ awk '{if ($1==\"chr2\") print $5}' hg38genes.txt\n",
-    "$ awk '{if ($5 ~ /MIR/) print}' hg38genes.txt \n",
-    "$ awk '{if ($5 ~ /MIR/ && $1!=\"chr3\") print}' hg38genes.txt\n",
+    "$ awk '{print $1}' data/hg38genes.txt  # assumes tab/space delimited columns\n",
+    "$ awk '{if ($1==\"chr2\") print $5}' data/hg38genes.txt\n",
+    "\n",
+    "$ awk '{print $2,$3}' data/hg38genes.txt # you can print out multiple columns\n",
+    "$ awk '{print $3-$2}' data/hg38genes.txt # even perform operations on different columns\n",
+    "\n",
+    "\n",
+    "$ awk '{if ($5 ~ /MIR/) print}' data/hg38genes.txt \n",
+    "$ awk '{if ($5 ~ /MIR/ && $1!=\"chr3\") print}' data/hg38genes.txt\n",
     "```"
    ]
   },
@@ -382,13 +428,13 @@
     "The unix string editor, is also a very useful tool. There are many modes but one of the most useful works like find-and-substitute, where the pattern to find is given first and the substitution next.\n",
     "\n",
     "```\n",
-    "$ sed -e s/chr/CHR/ hg38genes.txt\n",
+    "$ sed -e s/chr/CHR/ data/hg38genes.txt\n",
     "```\n",
     "\n",
     "This will find the first occurrence of chr in each line and substitute it with CHR. To substitute all occurrences, specify ‘global’: \n",
     "\n",
     "```\n",
-    "$ sed -e s/chr/CHR/g hg38genes.txt\n",
+    "$ sed -e s/chr/CHR/g data/hg38genes.txt\n",
     "```\n"
    ]
   },
@@ -416,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
