--- a/day2/assignments/Day2-Homework_Python.ipynb
+++ b/day2/assignments/Day2-Homework_Python.ipynb
@@ -2,23 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0ad88676",
+   "metadata": {},
    "source": [
     "# Day 2 Homework"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "91d1c608",
+   "metadata": {},
    "source": [
     "1. Here are 25 numbers drawn from a normal distribution. Calculate the mean, standard deviation, and variance of the set. Do the mean calculation manually, and then use the built-in functions provided in the **statistics** module for the others.\n",
     "\n",
     "**Hint**: The functions *sum*, *len*, *statistics.stdev*, and *statistics.variance* will be useful. Use the *help()* command to learn more about them, if needed."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b3658bc9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import statistics\n",
     "\n",
@@ -31,106 +36,119 @@
     " \n",
     " ## your code here\n",
     "\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "1e497362",
+   "metadata": {},
    "source": [
     "From *my_samples* above, print out the following:\n",
     "- The first five elements (remember that python begins with index 0)\n",
     "- The last five elements\n",
     "- The 13th and 14th elements"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "d98cd07a",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "597a7521",
+   "metadata": {},
    "source": [
     "2. You are given a sample of a DNA plasmid with a known concentration of 1.85ug/uL and a length of 1,354 bases, and are asked to calculate the molarity of the sample. \n",
     "\n",
     "  * Create a function to calculate the molarity of a double-stranded DNA molecule given this information. (Google is your friend here to find the formula)."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "9ccb6a88",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "d92222f4",
+   "metadata": {},
    "source": [
     "  * You receive another plasmid with a length of 2,500 bases. You make a series of 10 dilutions ranging from 0-10ug/ul. Construct a loop to calculate the molarity of each dilution. (hint: help(range))"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "8c96c72b",
+   "metadata": {},
    "source": [
-    "3. Using a list comprehension approach, translate the following formulae and solve for the indicated range of values\n",
+    "3. Using either a for loop or a list comprehension approach, translate the following formulae and solve for the indicated range of values\n",
     "\n",
     "* $x^2$ for $x:\\{0 ... 9\\}$"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "a5db4739",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "ae5bcf2e",
+   "metadata": {},
    "source": [
     "* $2^x$ for all even numbers between 0 and 20"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "b28360bc",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "84a64e5a",
+   "metadata": {},
    "source": [
     "* $3x^4-2x^3+17x$ for $x:\\{1 ... 200\\}$"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "95e04a29",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "5dce1523",
+   "metadata": {},
    "source": [
-    "\\* Solve the following equation for $x$:\n",
+    "4. Solve the following equation for $x$:\n",
     "\n",
     "$x = p^2 + 2pq + q^2$ where $0<p<1$ and $q=1-p$ over the range of P values provided below. "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "92267711",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Here are the range of p's you will need (note 0<p<1 and the Set P variable is capitalized.)\n",
     "P = [0.0,0.2,0.33,0.5,0.66666667,0.99]\n",
@@ -141,27 +159,31 @@
     "\n",
     "#Using list comprehension and your newly created q() function translate the above formula and calculate the solution over the values in P\n",
     "\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "7aae5727",
+   "metadata": {},
    "source": [
     "_Bonus points: What is the name of this formula and what does it describe?_"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
+   "id": "570dd16b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f830f5482817da8c94e7b92359ddd59f62b3b721ee2e7f2ba7b076c4827b6548"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,10 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "interpreter": {
-   "hash": "f830f5482817da8c94e7b92359ddd59f62b3b721ee2e7f2ba7b076c4827b6548"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
