--- a/day1/notebooks/Day1.3 - Afternoon - Unix_and_Bash.ipynb
+++ b/day1/notebooks/Day1.3 - Afternoon - Unix_and_Bash.ipynb
@@ -349,6 +349,23 @@
     "\n",
     "\n",
     "$ ./args.sh argument1 arg2 another argument\n",
+    "```\n",
+    "\n",
+    "#### Exercises:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading file(s)/lines\n",
+    "\n",
+    "```\n",
+    "#!/bin/bash\n",
+    "file=$1\n",
+    "while read line; do\n",
+    "    echo $line\n",
+    "done < $file\n",
     "```"
    ]
   },
@@ -462,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
