--- a/day1/assignments/Day1-Homework.ipynb
+++ b/day1/assignments/Day1-Homework.ipynb
@@ -14,6 +14,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9ac3153-5f0a-4bc4-b036-b4d209a9f032",
+   "metadata": {},
+   "source": [
+    "Name (Last, First):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "01caeff1",
    "metadata": {},
    "source": [
@@ -22,7 +30,7 @@
     "    <li>-lt</li>\n",
     "    <li>-gt</li>\n",
     "    <li>-gte</li>\n",
-    "    <li>\\></li>"
+    "    <li>></li>"
    ]
   },
   {
@@ -148,12 +156,12 @@
    "id": "e30f50c6",
    "metadata": {},
    "source": [
-    "7. To perform decision depending on the fulfillment of certain criteria, ____ is used.\n",
+    "7. Which command can be used to remove a non-empty directory?\n",
     "<ol>\n",
-    "    <li>if\n",
-    "    <li>else\n",
-    "    <li>for\n",
-    "    <li>if and else\n",
+    "    <li>rmdir\n",
+    "    <li>rd\n",
+    "    <li>ddir\n",
+    "    <li>rm\n",
     "</ol>"
    ]
   },
@@ -203,10 +211,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b020e7e-5cec-4084-b791-3c6611990293",
+   "metadata": {},
+   "source": [
+    "Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b448c31-8524-44e8-83f4-981c5bb0adef",
+   "metadata": {},
+   "source": [
+    "10. What is command used to print the current working directory?\n",
+    "<ol>\n",
+    "    <li>popd\n",
+    "    <li>dir\n",
+    "    <li>pwd\n",
+    "    <li>du -h\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd47669a-a0c8-4857-bcad-b7ba7dfbac4e",
+   "metadata": {},
+   "source": [
+    "Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7e248f7a",
    "metadata": {},
    "source": [
-    "10. Write a bash script that takes as input, two integers and then tests for which one is larger. Paste the entire contents of your script below."
+    "11. Write a bash script that takes as input, two integers and then tests for which one is larger. Paste the entire contents of your script below."
    ]
   },
   {
@@ -222,7 +260,7 @@
    "id": "b18709c3",
    "metadata": {},
    "source": [
-    "11. Write a bash script that takes as input one integer and returns a random DNA sequence of that length. Paste the entire contents of your script below."
+    "Bonus: Write a bash script that takes as input one integer and returns a random DNA sequence of that length. Paste the entire contents of your script below."
    ]
   },
   {
