--- a/day1/notebooks/Day1.3 - Afternoon - Unix_and_Bash.ipynb
+++ b/day1/notebooks/Day1.3 - Afternoon - Unix_and_Bash.ipynb
@@ -342,16 +342,18 @@
     "\n",
     "#!/bin/bash\n",
     "\n",
+    "echo \"the first argument is $1.\"\n",
+    "echo \"the second argument is $2.\"\n",
     "echo \"the number of arguments is $#.\"\n",
     "echo \"the name of the program is $0.\"\n",
-    "echo \"the first argument is $1.\"\n",
     "echo \"\\$@ is a variable with all arguments: $@\"\n",
     "\n",
     "\n",
     "$ ./args.sh argument1 arg2 another argument\n",
     "```\n",
     "\n",
-    "#### Exercises:\n"
+    "#### Exercise:\n",
+    "1. Create a bash script that takes two arguments: a string, and an integer. The output of the script should be to repeat the input string as many times as indicated by the second argument.\n"
    ]
   },
   {
@@ -359,14 +361,19 @@
    "metadata": {},
    "source": [
     "## Reading file(s)/lines\n",
+    "When you are working on bash scripts, sometimes you may need to read a file line by line.\n",
     "\n",
     "```\n",
     "#!/bin/bash\n",
-    "file=$1\n",
+    "\n",
+    "file='data/authors.txt'\n",
+    "n=1\n",
     "while read line; do\n",
-    "    echo $line\n",
+    "    echo \"Line $n : $line\"\n",
+    "    n=$((n+1))\n",
     "done < $file\n",
-    "```"
+    "```\n",
+    "Let's deconstruct what's actually happening in this script.\n"
    ]
   },
   {
@@ -459,7 +466,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Practice Exercises"
+    "## Review\n",
+    "Let's stop here for the day:\n",
+    "\n",
+    "- Review outstanding questions/comments\n",
+    "- Review of any particular questions\n",
+    "- Homework quiz/problem set"
    ]
   }
  ],
