clear output of day2 notebooks

--- a/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
+++ b/day2/notebooks/Day2-Morning-Intro_to_Python_I.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,21 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "You are now leaving help and returning to the Python interpreter.\n",
-      "If you want to ask for help on a particular object directly from the\n",
-      "interpreter, you can type \"help(object)\".  Executing \"help('string')\"\n",
-      "has the same effect as typing a particular string at the help> prompt.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help()"
    ]
@@ -231,18 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 5\n",
     "print(type(x))\n",
@@ -259,20 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = float(4)\n",
     "x"
@@ -445,23 +413,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e\n",
-      "nomi\n",
-      "is fu\n",
-      "Genomics\n",
-      "is fun\n",
-      "Gnmc sfn\n",
-      "nuf si scimoneG\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a string literal and store in a variable\n",
     "a = \"Genomics is fun\"\n",
@@ -503,21 +457,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n",
-      "genomics is fun\n",
-      "My favorite gene is Pantr2.\n",
-      "Genomics is hard\n",
-      "['Genomics', 'is', 'fun']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the length of the string\n",
     "print(len(a))\n",
@@ -547,20 +489,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "False\n",
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = \"She sells seashells by the seashore.\"\n",
     "x = \"sea\" in a\n",
@@ -651,19 +582,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(14 > 3)\n",
     "print(14 == 3)\n",
@@ -730,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,19 +667,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mef2c\n",
-      "Cxcl1\n",
-      "['Mef2c', 'Pax6']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(genes[1])\n",
     "\n",
@@ -793,17 +704,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Gapdh', 'Mef2c', 'Sox10', 'Cxcl1', 'Msi1']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "genes[2] = 'Sox10'\n",
     "print(genes)"
@@ -818,21 +721,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GAPDH\n",
-      "MEF2C\n",
-      "SOX10\n",
-      "CXCL1\n",
-      "MSI1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x in genes:\n",
     "    print(x.upper())"
@@ -847,17 +738,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Gapdh', 'Mef2c', 'Sox10', 'Cxcl1', 'Msi1', 'Foxp1']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "genes.append('Foxp1')\n",
     "\n",
@@ -896,17 +779,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'banana', 'pear', 'carrot', 'celery', 'potato']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruit = ['apple', 'banana','pear']\n",
     "veg = ['carrot','celery','potato']\n",
@@ -932,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,19 +842,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sox2\n",
-      "chr4\n",
-      "1589182\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for val in a:\n",
     "    print(val)"
@@ -1416,7 +1281,7 @@
    "hash": "f830f5482817da8c94e7b92359ddd59f62b3b721ee2e7f2ba7b076c4827b6548"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1430,7 +1295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
