added shebang to python script instructions

--- a/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
+++ b/day2/notebooks/Day2-Afternoon-Intro_to_Python_II.ipynb
@@ -556,9 +556,18 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Let's make your first script. In JupyterLab, select File > New > Python File. To make it explicit that this is a python script, and to make it executable, add a hashbang statement to the first line that points to your python interpreter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's make your first script. In JupyterLab, select File > New > Python File. From there, add a `print` statement - *print(\"help! I'm stuck in a script!\")*. Congrats, your script is done! Now it can be saved and run from the command line by calling `python` and then providing the full name of script. If the script was named `my_script.py` (and lived in the current directory):"
+    "From there, add a `print` statement - *print(\"help! I'm stuck in a script!\")*. Congrats, your script is done! Now it can be saved and run from the command line by calling `python` and then providing the full name of script. If the script was named `my_script.py` (and lived in the current directory):"
    ]
   },
   {
